[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaoconnect"
version = "1.0.0"
description = "Super Simple AO Connect - Child-friendly Python interface"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aditya Berry", email = "aditya@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "aopy_connect @ git+https://github.com/imortaltatsu/aopy-connect.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/imortaltatsu/pyaoconnect"
Repository = "https://github.com/imortaltatsu/pyaoconnect"
Issues = "https://github.com/imortaltatsu/pyaoconnect/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyaoconnect*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 